fix: Right-align contact details

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ section .location {
 }
 
 #contact {
-  margin-top: 0.5rem;
+  text-align: right;
 }
 
 #profiles .item {
